# yannscrapy/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is bigdata SuperAgent.",
-        "title": "SuperAgent API Docs",
+        "description": "This is yannscrapy.",
+        "title": "yannscrapy API Docs",
         "contact": {},
         "version": "1.0"
     },
@@ -21,6 +21,86 @@
                     "Health"
                 ],
                 "summary": "健康接口",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/ticket/user": {
+            "post": {
+                "description": "返回ok",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User management"
+                ],
+                "summary": "添加用户",
+                "parameters": [
+                    {
+                        "description": "{`userId`: xxx, `password`: xxx}",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
+            "delete": {
+                "description": "返回ok",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User management"
+                ],
+                "summary": "删除用户",
+                "parameters": [
+                    {
+                        "description": "{`userId`: xxx}",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/ticket/user-list": {
+            "get": {
+                "description": "返回ok",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User management"
+                ],
+                "summary": "用户列表",
                 "responses": {
                     "200": {
                         "description": ""
